Spacing issues resolved

--- a/src/internshipFair/InternshipFair.css
+++ b/src/internshipFair/InternshipFair.css
@@ -10,6 +10,7 @@
   color: black;
   font-weight: 500;
   font-size: 46px;
+  margin: 0;
   /* padding: 4% 4% 0%; */
 }
 
@@ -19,6 +20,7 @@
   font-weight: 800;
   font-size: 132px;
   line-height: 8rem;
+  margin:0;
 }
 .extraHero {
   color: black;
